# car_demo

./: .gitmodules  Dockerfile  map2.yaml  run_demo (copy).bash  run_demo.bash
adapter/: CMakeLists.txt  README.md  package.xml
adapter/include/: twist_adapter.hpp
adapter/launch/: twist_adapter.launch
adapter/src/: twist_adapter.cpp
car_demo/launch/: demo.launch
car_demo/map/: map3.pgm  map3.yaml
car_demo/plugins/: PriusHybridPlugin.cc  PriusHybridPlugin.hh
car_demo/worlds/: city_osm_roundabout.world  city_osm_roundabout_combined.world  mcity.world  outdoor.world  small_city.world  test_city.world
kopilot_launch/: CMakeLists.txt  package.xml
kopilot_launch/config/templates/: kopilot.yaml
kopilot_launch/launch/: ackermann_sim.launch  kopilot.launch
